# sci-math-wasm

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  implementation_plan_v2.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  test-browser.html  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: cicd.yml  publish.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/theme/components/: BenchmarkRunner.css  BenchmarkRunner.vue  OptimizationHUD.vue  Playground.vue
docs/.vitepress/theme/workers/: bench.worker.ts  playground.worker.ts
docs/api/: analysis.md  basic.md  calculus.md  complex.md  engine.md  fitting.md  index.md  io.md  linalg.md  optimization.md  poly.md  regression.md  signal.md  stats.md  symbolic.md  trig.md  units.md
docs/guide/: file-processing.md  getting-started.md  index.md  integration.md  js-vs-wasm.md  migration.md  performance.md  tutorials.md
docs/public/: coi-serviceworker.js
docs/public/wasm/: sci_math_wasm.js  sci_math_wasm_bg.wasm
docs/public/wasm/snippets/wasm-bindgen-rayon-3e04391371ad0a8e/src/: workerHelpers.worker.js
examples/: README.md  file-processing-demo.html  performance-comparison.ts
scripts/: ci-local.sh  fix-pkg.cjs  fix-wasm-workers.js  iso-server.cjs  prepare-dist.js  serve-test.js  wrap-wasm.cjs
src/: engine.rs  fast_math.rs  lib.rs  sci-math.ts
src/analysis/: baseline.rs  deconvolve.rs  filters.rs  mod.rs  peak_detection.rs  smooth_sg.rs  snr.rs
src/basic/: mod.rs
src/calculus/: mod.rs
src/complex/: mod.rs
src/engine_core/: analysis.rs  fitting.rs  import.rs  matmul.rs  memory.rs  mod.rs  nbody.rs  ops.rs
src/fft/: mod.rs
src/fitting/: mod.rs
src/gpu/: mod.rs
src/io/: binary.rs  fast_numeric.rs  matlab.rs  mod.rs  npy.rs  parallel_core.rs  sniffers.rs  text.rs
src/js-mirror/: analysis.ts  basic.ts  calculus.ts  complex.ts  engine.ts  fitting.ts  linalg.ts  poly.ts  signal.ts  stats.ts  wasm-provider.ts
src/linalg/: mod.rs
src/ml/: mod.rs
src/optimization/: mod.rs
src/poly/: mod.rs
src/regression/: mod.rs
src/signal/: mod.rs
src/stats/: mod.rs
src/symbolic/: mod.rs
src/trig/: mod.rs
src/units/: mod.rs
test/: cross-validation.test.ts
tests/: accuracy.rs  bench.bench.ts  engine.spec.ts  io_bench.bench.ts  wasm.spec.ts
tests/parity/: parity.test.ts  shared.ts
