[package]
name = "sci-math-wasm"
version = "1.0.1"
edition = "2021"
authors = ["VeloSci Team"]
description = "High-performance scientific mathematical functions for WebAssembly"
license = "MIT"
repository = "https://github.com/VeloSci/sci-math-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
num-complex = "0.4"
rayon = { version = "1.11", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# IO Module dependencies
csv = "1.3"
calamine = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
fast-float = "0.2"
memchr = "2.7"  # SIMD-accelerated byte scanning
rand = "0.8"
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js"] }
flate2 = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { version = "1.0", optional = true }
nalgebra = { version = "0.33", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]

[features]
default = ["console_error_panic_hook"]
threads = ["rayon"]
wasm-threads = ["threads", "wasm-bindgen-rayon"]

[profile.release]
# Optimize for maximum performance
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true # Temporarily enable debug symbols for trace
incremental = false
overflow-checks = false
